<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80CBC4"
        android:padding="18dp">

        <ImageView
            android:contentDescription="@string/device_trader_logo"
            android:layout_centerHorizontal="true"
            android:id="@+id/headerBottom"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_marginTop="55dp"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/buttonTrade"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/headerBottom"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/get_a_quote_for_your_device_button"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/buttonTrade"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/button"
            android:text="@string/about_our_service_button"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/buttonRate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/buttonAbout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/button"
            android:text="@string/rate_us_on_google_play_button"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/deviceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonRate"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="75dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_main"></com.google.android.gms.ads.AdView>

    </RelativeLayout>
</ScrollView>